unpackaged/main/default/objects/Orders__x/fields/customerID__c.field-meta.xml
<CustomField>
        <fullName>customerID__c</fullName>
        <description>customerID</description>
        <externalDeveloperName>customerID</externalDeveloperName>
        <label>customerID</label>
        <length>18</length>
        <referenceTargetField>Account.Customer_ID__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>IndirectLookup</type>
    </CustomField>