unpackaged/main/default/objects/Orders__x/fields/orderDate__c.field-meta.xml
<CustomField>
        <fullName>orderDate__c</fullName>
        <description>orderDate</description>
        <externalDeveloperName>orderDate</externalDeveloperName>
        <label>orderDate</label>
        <type>DateTime</type>
    </CustomField>