unpackaged/main/default/objects/Orders__x/fields/orderID__c.field-meta.xml
<CustomField>
        <fullName>orderID__c</fullName>
        <description>orderID</description>
        <externalDeveloperName>orderID</externalDeveloperName>
        <label>orderID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>