unpackaged/main/default/objects/Orders__x/fields/shippedDate__c.field-meta.xml
<CustomField>
        <fullName>shippedDate__c</fullName>
        <description>shippedDate</description>
        <externalDeveloperName>shippedDate</externalDeveloperName>
        <label>shippedDate</label>
        <type>DateTime</type>
    </CustomField>